# Image2Notes

./: README.md
image2notes/: __main__.py  config.py  pyproject.toml
