[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image2notes"
version = "0.1.0"
description = "Convert the screenshots of an academic lectures to notes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["easyocr", "openai", "black"]
